Launcher update Switched to using a ProcessBuilder to start the application rather than manually generating the command.